# frecently

./: README.md  cabal.project  flake.nix  frecently.cabal  hie.yaml
.github/workflows/: CI.yaml
app/: Main.hs
test/: Spec.hs  default.nix
