cabal-version:   2.4
name:            frecently
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2022 Jonas Carpay
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/frecently#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/frecently.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib
  build-depends:
    , cereal
    , containers

executable frecently-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  frecently
